# ChangeLog for media-gfx/context-free
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  01 Aug 2008; Dmitry Dzhus (dzhus) <dima@sphinx.net.ru>
  +context-free-2.2_beta2.ebuild,
  +files/context-free-2.2_beta2-fix-cpp-headers.patch, +metadata.xml:
  New ebuild from bug 98293
