@@ -9,8 +9,8 @@ MY_PV=$(replace_version_separator 2 '')
 DESCRIPTION="A program that generates images from instructions written in context-free grammar"
 HOMEPAGE="http://www.contextfreeart.org/"
 SRC_URI="http://www.contextfreeart.org/download/ContextFreeSource${MY_PV}.tgz"
-LICENSE="GPL-2"
 
+LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~x86"
 IUSE=""
@@ -23,10 +23,6 @@ S="${WORKDIR}/ContextFreeSource${MY_PV}"
 src_unpack() {
 	unpack ${A}
 	epatch "${FILESDIR}/${P}-fix-cpp-headers.patch"
-}
-
-src_compile() {
-	emake || die "emake failed"
 }
 
 src_install() {
