@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  02 Aug 2008; Markus Ullmann <jokey@gentoo.org>
+  context-free-2.2_beta2.ebuild:
+  Remove default function
+
   01 Aug 2008; Dmitry Dzhus (dzhus) <dima@sphinx.net.ru>
   +context-free-2.2_beta2.ebuild,
   +files/context-free-2.2_beta2-fix-cpp-headers.patch, +metadata.xml:
